content/_generated-doc/3.6/config/quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config.adoc

:summaryTableId: quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_configuration]]link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.connection-pool-size]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.connection-pool-size[quarkus.keycloak.connection-pool-size]`


[.description]
--
Adapters will make separate HTTP invocations to the Keycloak server to turn an access code into an access token. This config option defines how many connections to the Keycloak server should be pooled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_CONNECTION_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_CONNECTION_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.enforcement-mode]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.enforcement-mode[quarkus.keycloak.policy-enforcer.enforcement-mode]`


[.description]
--
Specifies how policies are enforced.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_ENFORCEMENT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_ENFORCEMENT_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`permissive`, `enforcing`, `disabled` 
|`enforcing`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.path-cache.max-entries]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.path-cache.max-entries[quarkus.keycloak.policy-enforcer.path-cache.max-entries]`


[.description]
--
Defines the limit of entries that should be kept in the cache

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATH_CACHE_MAX_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATH_CACHE_MAX_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.path-cache.lifespan]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.path-cache.lifespan[quarkus.keycloak.policy-enforcer.path-cache.lifespan]`


[.description]
--
Defines the time in milliseconds when the entry should be expired

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATH_CACHE_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATH_CACHE_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--|long 
|`30000`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.lazy-load-paths]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.lazy-load-paths[quarkus.keycloak.policy-enforcer.lazy-load-paths]`


[.description]
--
Specifies how the adapter should fetch the server for resources associated with paths in your application. If true, the policy enforcer is going to fetch resources on-demand accordingly with the path being requested

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_LAZY_LOAD_PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_LAZY_LOAD_PATHS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.http-method-as-scope]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.http-method-as-scope[quarkus.keycloak.policy-enforcer.http-method-as-scope]`


[.description]
--
Specifies how scopes should be mapped to HTTP methods. If set to true, the policy enforcer will use the HTTP method from the current request to check whether access should be granted

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_HTTP_METHOD_AS_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_HTTP_METHOD_AS_SCOPE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.name]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.name[quarkus.keycloak.policy-enforcer.paths."paths".name]`


[.description]
--
The name of a resource on the server that is to be associated with a given path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.path]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.path[quarkus.keycloak.policy-enforcer.paths."paths".path]`


[.description]
--
A URI relative to the application’s context path that should be protected by the policy enforcer

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.methods.-methods-.method]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.methods.-methods-.method[quarkus.keycloak.policy-enforcer.paths."paths".methods."methods".method]`


[.description]
--
The name of the HTTP method

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__METHOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__METHOD+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.methods.-methods-.scopes]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.methods.-methods-.scopes[quarkus.keycloak.policy-enforcer.paths."paths".methods."methods".scopes]`


[.description]
--
An array of strings with the scopes associated with the method

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.methods.-methods-.scopes-enforcement-mode]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.methods.-methods-.scopes-enforcement-mode[quarkus.keycloak.policy-enforcer.paths."paths".methods."methods".scopes-enforcement-mode]`


[.description]
--
A string referencing the enforcement mode for the scopes associated with a method

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES_ENFORCEMENT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES_ENFORCEMENT_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`all`, `any`, `disabled` 
|`all`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.enforcement-mode]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.enforcement-mode[quarkus.keycloak.policy-enforcer.paths."paths".enforcement-mode]`


[.description]
--
Specifies how policies are enforced

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__ENFORCEMENT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__ENFORCEMENT_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`permissive`, `enforcing`, `disabled` 
|`enforcing`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.claim-information-point-complex-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.claim-information-point-complex-config[quarkus.keycloak.policy-enforcer.paths."paths".claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,Map<String,String>>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.claim-information-point-simple-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.paths.-paths-.claim-information-point-simple-config[quarkus.keycloak.policy-enforcer.paths."paths".claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.claim-information-point-complex-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.claim-information-point-complex-config[quarkus.keycloak.policy-enforcer.claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,Map<String,String>>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.claim-information-point-simple-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.policy-enforcer.claim-information-point-simple-config[quarkus.keycloak.policy-enforcer.claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|


h|[[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.named-tenants-additional-named-tenants]]link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.named-tenants-additional-named-tenants[Additional named tenants]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.connection-pool-size]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.connection-pool-size[quarkus.keycloak."tenant".connection-pool-size]`


[.description]
--
Adapters will make separate HTTP invocations to the Keycloak server to turn an access code into an access token. This config option defines how many connections to the Keycloak server should be pooled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__CONNECTION_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__CONNECTION_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`20`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.enforcement-mode]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.enforcement-mode[quarkus.keycloak."tenant".policy-enforcer.enforcement-mode]`


[.description]
--
Specifies how policies are enforced.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_ENFORCEMENT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_ENFORCEMENT_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`permissive`, `enforcing`, `disabled` 
|`enforcing`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.name]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.name[quarkus.keycloak."tenant".policy-enforcer.paths."paths".name]`


[.description]
--
The name of a resource on the server that is to be associated with a given path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.path]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.path[quarkus.keycloak."tenant".policy-enforcer.paths."paths".path]`


[.description]
--
A URI relative to the application’s context path that should be protected by the policy enforcer

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.methods.-methods-.method]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.methods.-methods-.method[quarkus.keycloak."tenant".policy-enforcer.paths."paths".methods."methods".method]`


[.description]
--
The name of the HTTP method

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__METHOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__METHOD+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.methods.-methods-.scopes]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.methods.-methods-.scopes[quarkus.keycloak."tenant".policy-enforcer.paths."paths".methods."methods".scopes]`


[.description]
--
An array of strings with the scopes associated with the method

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.methods.-methods-.scopes-enforcement-mode]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.methods.-methods-.scopes-enforcement-mode[quarkus.keycloak."tenant".policy-enforcer.paths."paths".methods."methods".scopes-enforcement-mode]`


[.description]
--
A string referencing the enforcement mode for the scopes associated with a method

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES_ENFORCEMENT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__METHODS__METHODS__SCOPES_ENFORCEMENT_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`all`, `any`, `disabled` 
|`all`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.enforcement-mode]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.enforcement-mode[quarkus.keycloak."tenant".policy-enforcer.paths."paths".enforcement-mode]`


[.description]
--
Specifies how policies are enforced

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__ENFORCEMENT_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__ENFORCEMENT_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`permissive`, `enforcing`, `disabled` 
|`enforcing`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.claim-information-point-complex-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.claim-information-point-complex-config[quarkus.keycloak."tenant".policy-enforcer.paths."paths".claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,Map<String,String>>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.claim-information-point-simple-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.paths.-paths-.claim-information-point-simple-config[quarkus.keycloak."tenant".policy-enforcer.paths."paths".claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATHS__PATHS__CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.path-cache.max-entries]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.path-cache.max-entries[quarkus.keycloak."tenant".policy-enforcer.path-cache.max-entries]`


[.description]
--
Defines the limit of entries that should be kept in the cache

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATH_CACHE_MAX_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATH_CACHE_MAX_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1000`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.path-cache.lifespan]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.path-cache.lifespan[quarkus.keycloak."tenant".policy-enforcer.path-cache.lifespan]`


[.description]
--
Defines the time in milliseconds when the entry should be expired

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATH_CACHE_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_PATH_CACHE_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--|long 
|`30000`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.lazy-load-paths]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.lazy-load-paths[quarkus.keycloak."tenant".policy-enforcer.lazy-load-paths]`


[.description]
--
Specifies how the adapter should fetch the server for resources associated with paths in your application. If true, the policy enforcer is going to fetch resources on-demand accordingly with the path being requested

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_LAZY_LOAD_PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_LAZY_LOAD_PATHS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.claim-information-point-complex-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.claim-information-point-complex-config[quarkus.keycloak."tenant".policy-enforcer.claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,Map<String,String>>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.claim-information-point-simple-config]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.claim-information-point-simple-config[quarkus.keycloak."tenant".policy-enforcer.claim-information-point]`


[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_CLAIM_INFORMATION_POINT+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.http-method-as-scope]]`link:#quarkus-keycloak-pep-config-group-keycloak-policy-enforcer-tenant-config_quarkus.keycloak.-tenant-.policy-enforcer.http-method-as-scope[quarkus.keycloak."tenant".policy-enforcer.http-method-as-scope]`


[.description]
--
Specifies how scopes should be mapped to HTTP methods. If set to true, the policy enforcer will use the HTTP method from the current request to check whether access should be granted

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_HTTP_METHOD_AS_SCOPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK__TENANT__POLICY_ENFORCER_HTTP_METHOD_AS_SCOPE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===